--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,21 @@
 body {
   background-color: #f2f2f2;
 }
+
 header::before {
   content: "";
   background-color: #b5838d;
   clip-path: polygon(100% 0px, 100% 20%, 0 60%, 0px 0px);
   position: absolute;
-  height: 100%;
+  height: 70%;
   width: 100%;
   z-index: -1;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 .about {
+  padding: 40px 50px 20px 50px;
   display: flex;
-  padding: 80px;
   align-items: center;
   justify-content: center;
 }
@@ -39,7 +40,6 @@ header::before {
 }
 
 .aboutContent {
-  max-width: 800px;
   padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   background-color: #f2f2f2;
@@ -47,6 +47,7 @@ header::before {
 
 .aboutContent p {
   padding: 20px 0;
+  font-size: 1.4rem;
 }
 .social {
   padding-top: 30px;
@@ -55,7 +56,8 @@ header::before {
   gap: 15px;
 }
 
-.social img {
+.social img,
+.links img {
   width: 25px;
 }
 
@@ -70,7 +72,67 @@ h1 {
   font-weight: 300;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+}
+
+.projects {
+  margin-top: 80px;
+  padding: 40px 50px 20px 50px;
+}
+
+h3 {
+  font-size: 2rem;
+  padding: 20px 0;
+}
+.projectsList {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.projectCard {
+  display: flex;
+  flex-direction: column;
+  width: max(350px, 30vw);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  flex: 1 1 auto;
+}
+
+.projectImg {
+  object-fit: cover;
+  height: 355px;
+}
+
+.projectText {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  gap: 15px;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+.projectText p {
+  flex-basis: 100%;
+  padding-bottom: 40px;
+  font-size: 1.4rem;
+}
+
+.links {
+  display: flex;
+  gap: 20px;
+}
+
 @media (max-width: 1000px) {
+  header::before {
+    height: 50%;
+  }
   .about {
     align-items: stretch;
   }
@@ -96,12 +158,15 @@ h1 {
     transform: none;
     left: 80%;
   }
+  h2 {
+    text-align: center;
+  }
+  .projects {
+    margin-top: 20px;
+  }
 }
 
 @media (max-width: 583px) {
-  header::before {
-    height: 70%;
-  }
   .about {
     flex-direction: column;
     align-items: center;
@@ -119,6 +184,7 @@ h1 {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
+    top: revert-layer;
   }
 
   h2 {
@@ -127,6 +193,15 @@ h1 {
 
   .social {
     display: flex;
+    justify-content: center;
+  }
+
+  h3 {
+    text-align: center;
+    padding: 15px 0;
+  }
+
+  .projectsList {
     justify-content: center;
   }
 }
