--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,12 @@ header::before {
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
-.about {
+.about,
+.projects,
+.contact {
   padding: 40px 50px 20px 50px;
+}
+.about {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,6 +52,11 @@ header::before {
 .aboutContent p {
   padding: 20px 0;
   font-size: 1.4rem;
+}
+
+h2,
+h5 {
+  font-size: 2.3rem;
 }
 .social {
   padding-top: 30px;
@@ -79,7 +88,6 @@ main {
 
 .projects {
   margin-top: 80px;
-  padding: 40px 50px 20px 50px;
 }
 
 h3 {
@@ -129,6 +137,54 @@ h4 {
   gap: 20px;
 }
 
+.contact {
+  background-color: #b5838d;
+  display: flex;
+  justify-content: center;
+  color: #f2f2f2;
+}
+.contactText {
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.contactText p {
+  font-size: 1.4rem;
+}
+.contactImage {
+  padding: 40px;
+  max-width: 800px;
+  max-height: 500px;
+}
+.contactImage img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.contactInfo {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.contactType {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.contactSocial {
+  margin-top: 20px;
+  display: flex;
+  gap: 25px;
+}
+
+.contactSocial img {
+  height: 40px;
+  width: 40px;
+}
+
 @media (max-width: 1000px) {
   header::before {
     height: 50%;
@@ -137,7 +193,7 @@ h4 {
     align-items: stretch;
   }
   .aboutContent {
-    margin-top: 50px;
+    margin-top: 80px;
     margin-left: -280px;
   }
   .aboutContent::before {
@@ -147,7 +203,7 @@ h4 {
     float: left;
     margin-right: 15px;
     margin-left: -60px;
-    margin-top: -70px;
+    margin-top: -100px;
   }
 
   .social {
@@ -159,6 +215,7 @@ h4 {
     left: 80%;
   }
   h2 {
+    padding-top: 80px;
     text-align: center;
   }
   .projects {
@@ -187,7 +244,8 @@ h4 {
     top: revert-layer;
   }
 
-  h2 {
+  h2,
+  h5 {
     text-align: center;
   }
 
@@ -195,7 +253,10 @@ h4 {
     display: flex;
     justify-content: center;
   }
-
+  .projects,
+  .contactText {
+    padding: 20px;
+  }
   h3 {
     text-align: center;
     padding: 15px 0;
@@ -203,5 +264,24 @@ h4 {
 
   .projectsList {
     justify-content: center;
+  }
+
+  .contact {
+    padding: 0;
+    flex-direction: column;
+  }
+
+  .contactImage {
+    flex-basis: 100%;
+    padding: 0;
+  }
+
+  .contactImage img {
+    width: 100%;
+  }
+
+  .contactSocial {
+    justify-content: center;
+    margin-bottom: 40px;
   }
 }
